[package]
name = "rrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
time = "0.3.20"
